--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,9 @@ spacy==3.7.2
 tqdm==4.66.1
 psycopg2-binary==2.9.9
 SQLAlchemy==2.0.25
+matplotlib==3.8.2
+seaborn==0.13.1
+plotly==5.18.0
+wordcloud==1.9.3
+jupyter==1.0.0
+notebook==7.0.7
